0.0.1dev3 (TBD)
---------------
- Fix bad tile stacking creating invalid tile shapes for mean and median method.
- Add stdev method

0.0.1dev2 (2019-07-18)
--------------------
- Force output data type to be the same as the input datatype 
from Mean and Median method#4

0.0.1dev1 (2019-07-18)
--------------------

**Breacking Changes**

- refactor pixel selection method to use MosaicMethodBase abstract class (#1)
- change method names (#2)

0.0.1dev0 (2019-05-23)
------------------

- Initial release